--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Andela</title>
   </head>
   <body>
-    <h1>
-      THis is first Andela
-    </h1>
+    <h1>THis is first Andela</h1>
     <h2>This is second Andela</h2>
-    <h3>THis is third Andela</h3>
+    <h3>This is third Andela</h3>
+
+    <script src="./index.js"></script>
   </body>
 </html>
